# USV

./: .clang-format  .gitignore  README.md
control/: CMakeLists.txt  package.xml
demo/: CMakeLists.txt  package.xml
demo/launch/: robot_msg.launch.py  std_msg.launch.py
demo/src/: Publish_robotmsg_node.cpp  Publish_stdmsg_node.cpp  Subscribe_robotmsg_node.cpp  Subscribe_stdmsg_node.cpp  Subscribe_test_node.cpp
perception_2d/: CMakeLists.txt  package.xml
perception_2d/launch/: test.launch.py  test_camera.launch.py
perception_2d/src/: camera_node.cpp  detection_node.cpp  model_test_node.cpp
perception_2d/src/algorithm/: CMakeLists.txt  common.hpp  detect_service.cpp  detect_service.h  yolov8.cpp  yolov8.h
perception_3d/: CMakeLists.txt  package.xml
perception_3d/cfgs/: sample0000.yaml  test_bevdet.yaml  test_configure.yaml
perception_3d/src/: test_node.cpp
perception_3d/src/algorithm/: CMakeLists.txt  bevdet.cpp  bevdet.h  cpu_jpegdecoder.cpp  data.cpp  data.h  iou3d_nms.h  test_inference.cpp  test_inference.h  utils.cpp  utils.h
robot_msgs/: CMakeLists.txt  package.xml
robot_msgs/msg/: Object2D.msg
robot_msgs/msg/perception_2d_msg/: BBox.msg  Detection.msg  FrameDetections.msg  VideoDetections.msg
task_allocation/: CMakeLists.txt  package.xml
